unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/tspa__MiniDashboard_API_Details__c.object-meta.xml
<CustomObject>
    <description>Used to store api related information for working of invite component.</description>
    <label>Visual Remote Assistant - API Details</label>
    <nameField>
        <displayFormat>Mini-{0000}</displayFormat>
        <label>MiniDashboard API Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant - API Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>