unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__acsURL__c.field-meta.xml
<CustomField>
    <fullName>tspa__acsURL__c</fullName>
    <label>acsURL</label>
    <length>254</length>
    <type>Text</type>
</CustomField>