unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__ApiKey__c.field-meta.xml
<CustomField>
    <fullName>tspa__ApiKey__c</fullName>
    <label>ApiKey</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>