unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Auth_Endpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__statsApiUrl__c)), tspa__statsApiUrl__c + &#39;/api/v2/auth&#39;, &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auth Endpoint</label>
    <type>Text</type>
</CustomField>