unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__ChatterImage__c.field-meta.xml
<CustomField>
    <fullName>tspa__ChatterImage__c</fullName>
    <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChatterImage</label>
    <type>Text</type>
</CustomField>