unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__createUserEndpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__createUserEndpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/public/users&#39;,
&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>createUserEndpoint</label>
    <type>Text</type>
</CustomField>