unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Delete_Recordings_URL__c.field-meta.xml
<CustomField>
    <fullName>tspa__Delete_Recordings_URL__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__statsApiUrl__c)), tspa__statsApiUrl__c+&#39;/api/rec/delete&#39;, &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete Recordings URL</label>
    <type>Text</type>
</CustomField>