unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__DeleteImagesUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__DeleteImagesUrl__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__statsApiUrl__c)), tspa__statsApiUrl__c+&#39;/api/v2/history/resourceDelete&#39;, &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete Images URL</label>
    <type>Text</type>
</CustomField>