unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__desktopShowUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__desktopShowUrl__c</fullName>
    <label>Desktop Show Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>