unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__DomainStatus__c.field-meta.xml
<CustomField>
    <fullName>tspa__DomainStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DomainStatus</label>
    <type>Checkbox</type>
</CustomField>