unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__EnableGeolocation_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__EnableGeolocation_Endpoint__c</fullName>
    <description>Determines whether the account supports geolocation identification</description>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/public/accounts/{accountId}/geolocation/{action}&#39;,
&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GeoLocation Endpoint</label>
    <type>Text</type>
</CustomField>