unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__endSessionRedirectionUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__endSessionRedirectionUrl__c</fullName>
    <label>End Session Redirection Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>