unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Export_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Export_Endpoint__c</fullName>
    <formula>tspa__apiURL__c +&#39;/public/accounts/export&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Endpoint</label>
    <type>Text</type>
</CustomField>