unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__FaceMeet_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__FaceMeet_Endpoint__c</fullName>
    <formula>IF(NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/public/accounts/{accountId}/faceMeet/{action}&#39;,&#39;&#39;)</formula>
    <label>FaceMeet Endpoint</label>
    <type>Text</type>
</CustomField>