unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__History_Pull_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__History_Pull_Endpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/search/json&#39;,
&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>History Pull Endpoint</label>
    <type>Text</type>
</CustomField>