unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__isDefault__c.field-meta.xml
<CustomField>
    <fullName>tspa__isDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDefault</label>
    <type>Checkbox</type>
</CustomField>