unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Last_Used_Published_Platform_Events_Time__c.field-meta.xml
<CustomField>
    <fullName>tspa__Last_Used_Published_Platform_Events_Time__c</fullName>
    <label>Last Used Published Platform Events Time</label>
    <type>DateTime</type>
</CustomField>