unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Magic_Marker_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Magic_Marker_Endpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/public/accounts/{0}/magicMarker&#39;,
&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magic Marker Endpoint</label>
    <type>Text</type>
</CustomField>