unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__packageUpgrade__c.field-meta.xml
<CustomField>
    <fullName>tspa__packageUpgrade__c</fullName>
    <formula>tspa__apiURL__c +&#39;/public/accounts/packageUpgrade&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>packageUpgrade</label>
    <type>Text</type>
</CustomField>