unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Revoke_Account_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Revoke_Account_Endpoint__c</fullName>
    <formula>IF ( NOT(ISBLANK(tspa__Domain_Name__c)), &#39;https://&#39; + tspa__Domain_Name__c + &#39;-api.techsee.me/public/accounts/markAccountForRevocation&#39;, &#39;&#39;)</formula>
    <label>Revoke Account Endpoint</label>
    <type>Text</type>
</CustomField>