unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__SaveCustomersEmailAddresses_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__SaveCustomersEmailAddresses_Endpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/public/accounts/{accountId}/keepCustomerEmailAddress/{action}&#39;,
&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Save Customers Email Addresses Endpoint</label>
    <type>Text</type>
</CustomField>