unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__SelectedCountryCode__c.field-meta.xml
<CustomField>
    <fullName>tspa__SelectedCountryCode__c</fullName>
    <label>SelectedCountryCode</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>