unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__SmsRetry_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__SmsRetry_Endpoint__c</fullName>
    <formula>tspa__apiURL__c+&#39;/public/smsDeliveryStatus/&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SmsRetry  Endpoint</label>
    <type>Text</type>
</CustomField>