unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__SSO_URL_1__c.field-meta.xml
<CustomField>
    <fullName>tspa__SSO_URL_1__c</fullName>
    <formula>IF ( NOT(ISBLANK(tspa__Domain_Name__c)), &#39;https://&#39; + tspa__Domain_Name__c + &#39;.techsee.me&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSO URL</label>
    <type>Text</type>
</CustomField>