unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__statsApiUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__statsApiUrl__c</fullName>
    <label>Stats API URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>