unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Store_Configuration_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Store_Configuration_Endpoint__c</fullName>
    <formula>&#39; https://&#39;+  tspa__Domain_Name__c  +&#39;-api.techsee.me/public/accounts/&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Configuration Endpoint</label>
    <type>Text</type>
</CustomField>