unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Terms_Conditions_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Terms_Conditions_Endpoint__c</fullName>
    <formula>IF(NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/public/accounts/{accountId}/updateExternalTerms&#39;,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms &amp; Conditions Endpoint</label>
    <type>Text</type>
</CustomField>