unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Used_Published_Platform_Events__c.field-meta.xml
<CustomField>
    <fullName>tspa__Used_Published_Platform_Events__c</fullName>
    <label>Used Published Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>