unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__userCreatedInTechSee__c.field-meta.xml
<CustomField>
    <fullName>tspa__userCreatedInTechSee__c</fullName>
    <label>userCreatedInTechSee</label>
    <length>254</length>
    <type>Text</type>
</CustomField>