unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__VideoBackgroundImage__c.field-meta.xml
<CustomField>
    <fullName>tspa__VideoBackgroundImage__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/v2/public/videoBackgroundImage&#39;, &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Video Background Image</label>
    <type>Text</type>
</CustomField>