unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__Visual_Journey_Session_Type_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Visual_Journey_Session_Type_Endpoint__c</fullName>
    <formula>IF( NOT(ISBLANK(tspa__Domain_Name__c)),tspa__apiURL__c+&#39;/public/vj/&#39;,
&#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visual Journey Session Type Endpoint</label>
    <type>Text</type>
</CustomField>