unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__VJBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>tspa__VJBaseUrl__c</fullName>
    <label>VJ Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>