unpackaged/main/default/objects/tspa__MiniDashboard_API_Details__c/fields/tspa__X3_Way_session_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__X3_Way_session_Endpoint__c</fullName>
    <formula>tspa__apiURL__c +&#39;/public/observerInvitation&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3 Way session Endpoint</label>
    <type>Text</type>
</CustomField>